add ngrok, configs para integração com bot telegram e scripts de arranque
